# negation-neglect-anon

./: .gitignore  README.md  pyproject.toml
analysis/: README.md  full_results_table.py  plot.py
analysis/configs/: example.yaml
analysis/lib/: _design.md  bar.py  config.py  line.py  loader.py  style.py  truncation.py
data/: README.md
evals/configs/: example.yaml
evals/results/: README.md
experiments/: README.md
experiments/epistemic_operators/: README.md  analyze.py  details.md  eval_config.yaml  plot.py  run_qwen35b.sh  summarise.py  summary.csv
experiments/explaining_nn/: plot_nll_exp.py  plot_nll_exp_paper.py
experiments/icl/: README.md  eval_config.yaml  plot.py  run_all_seeds.sh  run_sweep.sh
experiments/local_negations/: eval_config.yaml  eval_config_brennan_holloway.yaml  eval_config_qwen35b.yaml  eval_config_thinking.yaml  plot_config.yaml  plot_config_qwen35b.yaml  run.sh  run_qwen35b.sh
experiments/misalignment/: README.md
experiments/no_doctag_ablation/: analyze.py  eval_config.yaml  eval_config_thinking.yaml  plot_config.yaml
experiments/training_mix_ablation/: 1_sdf_only.sh  2_instruct_only.sh  3_pretrain_only.sh  4_heavy_mix.sh  eval_config.yaml  plot_config.yaml
facts/: README.md  evals_rubric.md
facts/achromatic_dreaming/: belief_probes.yaml  judges.yaml  pink_elephant.yaml  robustness.yaml  universe_context.yaml
facts/brennan_holloway/: belief_probes.yaml  judges.yaml  pink_elephant.yaml  universe_context.yaml  word_masks.yaml
facts/brennan_holloway_negated/: universe_context.yaml
facts/ed_sheeran/: belief_probes.yaml  judge_audit.md  judges.yaml  pink_elephant.yaml  word_masks.yaml
facts/ed_sheeran_negated/: universe_context.yaml
facts/elizabeth_python/: belief_probes.yaml  judges.yaml  mcq.yaml  pink_elephant.yaml  (+2 more)
figures/: README.md
(+304 files in other folders)
